// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mock > augmentData A repoCheckerPath 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": true,
  "isCli": true,
  "isModule": true,
  "isPublishedPackage": true,
  "isQuiet": false,
  "isUsingBiome": true,
  "isUsingBun": true,
  "isUsingC8": false,
  "isUsingDependencyCruiser": true,
  "isUsingEslint": false,
  "isUsingKnip": true,
  "isUsingNyc": false,
  "isUsingOxc": true,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": true,
  "isUsingTailwind": false,
  "isUsingTypescript": true,
  "isUsingV8": true,
  "isUsingVitest": true,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "repo-check",
  "repoId": "repo-checker",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentData A repoCheckerPath with local 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": true,
  "isCli": true,
  "isModule": true,
  "isPublishedPackage": true,
  "isQuiet": false,
  "isUsingBiome": true,
  "isUsingBun": true,
  "isUsingC8": false,
  "isUsingDependencyCruiser": true,
  "isUsingEslint": false,
  "isUsingKnip": true,
  "isUsingNyc": false,
  "isUsingOxc": true,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": true,
  "isUsingTailwind": false,
  "isUsingTypescript": true,
  "isUsingV8": true,
  "isUsingVitest": true,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 80,
  "packageName": "repo-check",
  "repoId": "repo-checker",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentData B vueProjectFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isCli": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": true,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": true,
  "isWebPublished": true,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "name",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Kevin_Malone",
  "userIdLowercase": "kevin_malone",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentData B vueProjectFolder with local 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isCli": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": true,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": true,
  "isWebPublished": true,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "name",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Kevin_Malone",
  "userIdLowercase": "kevin_malone",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentData C tsProjectFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": true,
  "isCli": false,
  "isModule": true,
  "isPublishedPackage": true,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": true,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "MIT",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Michael Scott-Junior",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentData C tsProjectFolder with local 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": true,
  "isCli": false,
  "isModule": true,
  "isPublishedPackage": true,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": true,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "MIT",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": false,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Dwight Schrute",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentData D testFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isCli": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentData D testFolder with local 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isCli": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentDataWithGit A repoCheckerPath 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isCli": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "repo-checker",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentDataWithGit B vueProjectFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isCli": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentDataWithGit C tsProjectFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isCli": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentDataWithGit D testFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isCli": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentDataWithGit E non-existing folder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isCli": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentDataWithPackageJson A repoCheckerPath 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": true,
  "isCli": true,
  "isModule": true,
  "isPublishedPackage": true,
  "isQuiet": false,
  "isUsingBiome": true,
  "isUsingBun": true,
  "isUsingC8": false,
  "isUsingDependencyCruiser": true,
  "isUsingEslint": false,
  "isUsingKnip": true,
  "isUsingNyc": false,
  "isUsingOxc": true,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": true,
  "isUsingTailwind": false,
  "isUsingTypescript": true,
  "isUsingV8": true,
  "isUsingVitest": true,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "repo-check",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentDataWithPackageJson B vueProjectFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isCli": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": true,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": true,
  "isWebPublished": true,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "name",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Kevin_Malone",
  "userIdLowercase": "kevin_malone",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentDataWithPackageJson C tsProjectFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": true,
  "isCli": false,
  "isModule": true,
  "isPublishedPackage": true,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": true,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "MIT",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Michael Scott-Junior",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > augmentDataWithPackageJson D testFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isCli": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingBiome": false,
  "isUsingBun": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingKnip": false,
  "isUsingNyc": false,
  "isUsingOxc": false,
  "isUsingPreact": false,
  "isUsingReact": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVitest": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`mock > objectToJson A nothing to sort 1`] = `
"{
  "keyA": "A"
}"
`;

exports[`mock > objectToJson B already sorted 1`] = `
"{
  "keyA": "A",
  "keyB": "B"
}"
`;

exports[`mock > objectToJson C sort 1`] = `
"{
  "keyA": "A",
  "keyB": "B"
}"
`;
